# libs

LameSDK/: settings.gradle
LameSDK/app/: build.gradle
LameSDK/app/src/main/: AndroidManifest.xml
LameSDK/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
LameSDK/app/src/main/res/values/: strings.xml
LameSDK/gradle/wrapper/: gradle-wrapper.properties
proj.android-studio/: build.gradle  gradle.properties  settings.gradle
proj.android-studio/app/: AndroidManifest.xml  build.gradle  google-services.json  proguard-rules.pro
proj.android-studio/app/res/layout/: activity_qrcode.xml  activity_scanner.xml  bottom_dailog.xml  capture.xml  toolbar_qrcode.xml  topbar_scanner.xml
proj.android-studio/app/res/values/: colors.xml  ids.xml  internalizations.xml  strings.xml  styles.xml
proj.android-studio/app/res/values-zh-rTW/: internalizations.xml
proj.android-studio/app/res/xml/: provider_paths.xml
proj.android-studio/app/src/com/google/zxing/activity/: CaptureActivity.java  QRCodeActivity.java
proj.android-studio/app/src/com/google/zxing/decoding/: CaptureActivityHandler.java  DecodeHandler.java
proj.android-studio/app/src/com/google/zxing/encoding/: EncodingHandler.java
proj.android-studio/app/src/com/google/zxing/view/: ViewfinderView.java
proj.android-studio/app/src/xsg/lychee/richalpha/: AppActivity.java  LocalizedActivity.java  SDKWrapper.java
proj.android-studio/app/src/xsg/lychee/richalpha/dailog/: BottomDailog.java
proj.android-studio/app/src/xsg/lychee/richalpha/imagePicker/: ImagePickerActivity.java  ImagePickerSDK.java  ImageUtil.java
proj.android-studio/app/src/xsg/lychee/richalpha/line/: WZ3LineSDK.java
proj.android-studio/app/src/xsg/lychee/richalpha/qrcode/: QRcodeTool.java
proj.android-studio/app/src/xsg/lychee/richalpha/service/: MyFirebaseMessagingService.java  SDKClass.java  SDKInterface.java  SMSContentObserver.java
proj.android-studio/app/src/xsg/lychee/richalpha/utils/: AdaptiveUtil.java  AppUtils.java  BitmapUtil.java  Constant.java  LanguageConstants.java  LocalizationUtil.java  PermissionUtil.java  SMSCodeUtil.java  TimePickerUtil.java
(+37 files in other folders)
